map.css
body {
  background-color: #1c1c1c !important;
  overflow-x: hidden;
}

.map {
    display: flex;
    -ms-flex:50%;
    flex: 50%;
    padding: 2em .5em;
    z-index: 1;
    /* border-radius: 29px; */
}
.view{
    -ms-flex:50%;
    flex: 50%;
    /* margin: 1em; */
    height: 100%;
    /* border-radius: 0 10px 10px 0; */
    z-index: 0;
}

.map-legend {
  font-family: karla, sans-serif;
  display: flex;
  justify-content: center;
  margin: 12px 0;
  color: #000;
  font-size: 28px;
}

.map-legend-details {
  font-family: karla, sans-serif;
  margin: 12px 0;
  color: #000;
  font-size: 14px;
}
.map-legend-details strong {
  font-weight: 900;
  font-size: 18p
}

#click-icon {
  width: 18px;
  height: 18px;
}

#mapid {
    height: 850px;
    border-radius: 0 10px 10px 0;
}
#gentry-list {
    padding: 0px 14px;
    background-color: #fdfdfc;
    height: 850px;
    max-width: 350px;
    overflow: scroll;
    border-radius: 10px 0 0 10px;
}

li{
    list-style-type: none;
    color: black;
    line-height: 1.9em;
    cursor: pointer;
}
li:hover {
    color: rgba(200,0,0,1);
    background: rgba(255, 189, 182, 0.3);
}
li:first-child {
  margin-top: 14px;
}

hr {
  padding: 3px 0;
  border-bottom: 1px solid #00000040;
}

.anchor-points-icon {
  display: inline-flex;
  object-fit:scale-down;
  -webkit-box-align: center;
  align-items: center;
  height: 25px;
  width: 25px;
  float: right;
  margin: 0px 3px;
}

.predpol-icon {
  display: inline-flex;
  object-fit:scale-down;
  -webkit-box-align: center;
  align-items: center;
  height: 25px;
  width: 25px;
  float: right;
  margin: -13px 3px;
}

.police-killings-icon {
  display: inline-flex;
  object-fit:scale-down;
  -webkit-box-align: center;
  align-items: center;
  height: 25px;
  width: 25px;
  float: right;
  margin: -13px 3px;
}

.laser-police-killings-icon {
  display: inline-flex;
  object-fit:scale-down;
  -webkit-box-align: center;
  align-items: center;
  height: 25px;
  width: 25px;
  float: right;
  margin: -25px 3px;
}
#csp , #predpol{
  line-height: 16px;
  padding: 10px 0 5px;
}

#anchor-point {
  padding-top: 6px;
}
#police-killings {
  line-height: 16px;
  padding-top: 10px;
}

#central_hidden, #hollenbeck_hidden, #newton_hidden, #southwest_hidden, #seventy-seven_hidden, #southeast_hidden, #harbor_hidden, #csp_hidden, #predpol_hidden, #police-killings_hidden {
  color: grey;
  text-decoration: line-through;
}

.csp-site{
  font-size: 12px;
  font-weight: 800;
  font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
  display: inline-flex;
  -webkit-box-align: center;
  align-items: center;
  height: 16px;
  box-sizing: border-box;
  color: #183b7e;
  border: 2px dotted #183b7e;
  padding: 8px 4px;
  background: #4c586e10;
  float: right;
  margin: -9px 3px 0 3px;
}

.central-laser{
  font-size: 12px;
  font-weight: 800;
  font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
  display: inline-flex;
  -webkit-box-align: center;
  align-items: center;
  height: 16px;
  box-sizing: border-box;
  color: #b83838;
  border: 2px solid #b83838;
  padding: 8px 4px;
  background: #b8383810;
  float: right;
  margin: 6px 3px 0 3px;
}

.newton-laser{
  font-size: 12px;
  font-weight: 800;
  font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
  display: inline-flex;
  -webkit-box-align: center;
  align-items: center;
  height: 16px;
  box-sizing: border-box;
  color: #2D2424;
  border: 2px solid #2D2424;
  padding: 8px 4px;
  background: #2D242410;
  float: right;
  margin: 6px 3px 0 3px;
}

.southwest-laser{
  font-size: 12px;
  font-weight: 800;
  font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
  display: inline-flex;
  -webkit-box-align: center;
  align-items: center;
  height: 16px;
  box-sizing: border-box;
  color: #B85C38;
  border: 2px solid #B85C38;
  padding: 8px 4px;
  background: #B85C3810;
  float: right;
  margin: 6px 3px 0 3px;
}

.harbor-laser{
  font-size: 12px;
  font-weight: 800;
  font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
  display: inline-flex;
  -webkit-box-align: center;
  align-items: center;
  height: 16px;
  box-sizing: border-box;
  color: #002366;
  border: 2px solid #002366;
  padding: 8px 4px;
  background: #00236610;
  float: right;
  margin: 6px 3px 0 3px;
}

.hollenbeck-laser{
  font-size: 12px;
  font-weight: 800;
  font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
  display: inline-flex;
  -webkit-box-align: center;
  align-items: center;
  height: 16px;
  box-sizing: border-box;
  color: #7952B3;
  border: 2px solid #7952B3;
  padding: 8px 4px;
  background: #7952B310;
  float: right;
  margin: 6px 3px 0 3px;
}

.seventy-seven-laser{
  font-size: 12px;
  font-weight: 800;
  font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
  display: inline-flex;
  -webkit-box-align: center;
  align-items: center;
  height: 16px;
  box-sizing: border-box;
  color: #592e2d;
  border: 2px solid #592e2d;
  padding: 8px 4px;
  background: #592e2d10;
  float: right;
  margin: 6px 3px 0 3px;
}
.southeast-laser{
  font-size: 12px;
  font-weight: 800;
  font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
  display: inline-flex;
  -webkit-box-align: center;
  align-items: center;
  height: 16px;
  box-sizing: border-box;
  color: #b59b00;
  border: 2px solid #b59b00;
  padding: 8px 4px;
  background: #b59b0010;
  float: right;
  margin: 6px 3px 0 3px;
}
.my-label {
    font-size: 12px;
    background: #000 !important;
    color: white !important;
    border: none !important;
    font-family: monospace !important;
}

.leaflet-tooltip-top:before {
  border-top-color: #000 !important;
}

.img-tooltip {
    display: flex;
    width: 200px;
    border-radius: 10px;
}

@media only screen and (max-width: 400px) {
  .map {
    flex-direction: column-reverse;
    margin: 0;
    padding: 0;
  }
  #mapid {
    height: 500px;
    border-radius: 0;
    margin: 0 5px;
  }
  .view {
    margin: 0;
  }
  #gentry-list {
    margin: 0 5px;
    padding: 20px;
    border-radius: 0;
    max-width: 100%;
  }
  .leaflet-popup-content-wrapper, .leaflet-popup-tip {
    max-width: 250px !important;
    max-height: 250px !important;
    overflow-y: scroll;
  }
}


.laser-zone-title {
  color: black;
  display: flex;
  justify-content: center;
}

.map-cover {
  max-width: 100vw;
  overflow: hidden;
  margin: 50px 25vw 0;
}
.map-cover-graphic {
  display: flex;
  flex-direction: row;
  width: 100%;
  margin: 0;
  padding: 0;
}

@media only screen and (max-width: 1150px) { 
  .map-cover {
    margin: 50px 10vw 0
  }
}

@media only screen and (max-width: 800px) { 
  .map-cover {
    margin: 50px 0 0;
  }
}

.back-navigation {
  width: 100vw;
  padding: 12px;
  font-size: 21px;
  color: #fff;
  font-family: Helvetica;
  font-weight: bold;
}

.back-navigation a:hover {
  color: #edc944;
}

